[gd_scene load_steps=3 format=3 uid="uid://d0y6us1o18tkr"]

[ext_resource type="Texture2D" uid="uid://bfjv5pykqpmoc" path="res://Placeholders/InventorySlot.png" id="1_57ng3"]
[ext_resource type="Script" uid="uid://cmo3ygd568rki" path="res://Scripts/UI/EquipmentInventory/EquipmentInventorySlot.gd" id="1_ocd28"]

[node name="EquipmentInventorySlot" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -590.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ocd28")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotBorder" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_57ng3")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="SlotBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="EquipmentIcon" type="TextureRect" parent="SlotBorder/MarginContainer"]
layout_mode = 2
expand_mode = 3
